# LeitorCertificadoDigital

./: CMakeLists.txt  INSTRUCOES_COMPILACAO.txt  README.md
OpenSSL/lib/: libcrypto.lib  libssl.lib
_install/: INSTRUCOES_EXECUCAO.txt
src/: CMakeLists.txt  main.cpp
